src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #00ADD8;
  --ifm-color-primary-dark: rgb(0, 117, 138);
  --ifm-color-primary-darker: rgb(0, 117, 138);
  --ifm-color-primary-darkest: #00758D;
  --ifm-color-primary-light: rgb(0, 182, 214);
  --ifm-color-primary-lighter: rgb(28, 198, 223);
  --ifm-color-primary-lightest: rgb(79, 203, 227);
  --ifm-code-font-size: 95%;
}

